Add strings for summaryOn/Off in prefs

--- a/Remidomo/res/values/strings.xml
+++ b/Remidomo/res/values/strings.xml
@@ -49,17 +49,21 @@
     <string name="pref_reset_title">Redémarrer le service</string>
     <string name="pref_reset_summary">Redémarre le service en quittant les préférences</string>
     <string name="pref_night_title">Griser les nuits</string>
-    <string name="pref_night_summary">Grise la courbe entre 20h et 8h</string>
+    <string name="pref_night_summary_on">Grise la courbe entre 20h et 8h</string>
+    <string name="pref_night_summary_off">N\'indique pas les nuits sur les courbes</string>
     <string name="pref_dots_title">Afficher les points</string>
-    <string name="pref_dots_summary">Affiche un point pour chaque mesure</string>
+    <string name="pref_dots_summary_on">Affiche un point pour chaque mesure</string>
+    <string name="pref_dots_summary_off">Affiche une ligne uniquement</string>
     <string name="pref_days_title">Afficher les jours</string>
-    <string name="pref_days_summary">Affiche une lettre pour chaque jour</string>
+    <string name="pref_days_summary_on">Affiche une lettre pour chaque jour</string>
+    <string name="pref_days_summary_off">N\'affiche pas la lettre des jours</string>
     <string name="pref_plotlimit_title">Historique des courbes</string>
     <string name="pref_plotlimit_summary">Tracé des courbes %1$d jours en arrière</string>
     <string name="pref_plotlimit_dialog">Nombre de jours</string>
     <string name="pref_notifications">Notifications</string>
 	<string name="pref_sound_title">Son</string>
-	<string name="pref_sound_summary">Joue un son à chaque notification</string>
+	<string name="pref_sound_summary_on">Joue un son à chaque notification</string>
+	<string name="pref_sound_summary_off">Reste silencieux lors des notifications</string>
 	<string name="pref_c2dm_account_title">Compte C2DM</string>
     <string name="pref_c2dm_account_summary">Nom du compte C2DM</string>
     <string name="pref_c2dm_account_dialog">Login</string>
