--- a/Remidomo/res/values/strings.xml
+++ b/Remidomo/res/values/strings.xml
@@ -31,6 +31,7 @@
     <string name="pref_port_summary">Numéro de port</string>
     <string name="pref_reseau">Réseau</string>
     <string name="pref_general">Général</string>
+    <string name="pref_service">Service</string>
     <string name="pref_storelimit_title">Historique des données</string>
     <string name="pref_storelimit_summary">Données conservées pendant %1$d jours</string>
     <string name="pref_storelimit_dialog">Nombre de jours</string>
