Account for different tarifs for energy - plots highlight nights and also HC/HP - print power in different colors - add relevant preferences, with a time picker

--- a/Remidomo/res/values/strings.xml
+++ b/Remidomo/res/values/strings.xml
@@ -69,12 +69,14 @@
 	<string name="pref_sound_title">Son</string>
 	<string name="pref_sound_summary_on">Joue un son à chaque notification</string>
 	<string name="pref_sound_summary_off">Reste silencieux lors des notifications</string>
-	<string name="pref_c2dm_account_title">Compte C2DM</string>
-    <string name="pref_c2dm_account_summary">Nom du compte C2DM</string>
-    <string name="pref_c2dm_account_dialog">Login</string>
-	<string name="pref_c2dm_password_title">Mot de passe C2DM</string>
-    <string name="pref_c2dm_password_summary">Mot de passe du compte C2DM</string>
-    <string name="pref_c2dm_password_dialog">Mot de passe</string>
+	<string name="pref_energy">Energie</string>
+	<string name="pref_hchour_summary">Heures creuses à partir de %1$dh%2$s</string>
+	<string name="pref_hchour_title">Heures creuses</string>
+	<string name="pref_hphour_summary">Heures pleines à partir de %1$dh%2$s</string>
+	<string name="pref_hphour_title">Heures pleines</string>
+	<string name="pref_tarif_title">Afficher les heures pleines</string>
+    <string name="pref_tarif_summary_on">Affiche les heures pleines</string>
+    <string name="pref_tarif_summary_off">N\'affiche pas les heures pleines</string>
     <string name="invalid_url">Cette URL n\'est pas valide (http://...)</string>
     <string name="invalid_int_lower">Doit être supérieur à %1$d</string>
 	<string name="invalid_int_higher">Doit être inférieur à %1$d</string>
