--- a/Remidomo/res/values/strings.xml
+++ b/Remidomo/res/values/strings.xml
@@ -77,6 +77,9 @@
 	<string name="pref_tarif_title">Afficher les heures pleines</string>
     <string name="pref_tarif_summary_on">Affiche les heures pleines</string>
     <string name="pref_tarif_summary_off">N\'affiche pas les heures pleines</string>
+    <string name="pref_energylimit_title">Historique des courbes</string>
+    <string name="pref_energylimit_summary">Tracé des courbes %1$d jours en arrière</string>
+    <string name="pref_energylimit_dialog">Nombre de jours</string>
     <string name="invalid_url">Cette URL n\'est pas valide (http://...)</string>
     <string name="invalid_int_lower">Doit être supérieur à %1$d</string>
 	<string name="invalid_int_higher">Doit être inférieur à %1$d</string>
