Add power status (server + client)
Push a notification when power is restored, with duration of power loss

--- a/Remidomo/res/values/strings.xml
+++ b/Remidomo/res/values/strings.xml
@@ -107,6 +107,8 @@
     <string name="garage_moving">Garage bloqué en cours de manoeuvre</string>
     <string name="low_bat">Batterie du serveur faible</string>
     <string name="missing_sensor">Le capteur \'%1$s\' n\'émet plus</string>
+    <string name="power_dropped">Plus d\'alimentation électrique</string>
+    <string name="power_restored">Alimentation électrique restaurée après %1$s</string>
 
     <!--  Energie -->
     <string name="kw">kW</string>
