--- a/Remidomo/res/values/strings.xml
+++ b/Remidomo/res/values/strings.xml
@@ -91,6 +91,11 @@
 	<string name="pref_maintenance">Maintenance</string>
 	<string name="pref_reset">Effacer données</string>
 	<string name="pref_reset_summary">Effacer les données des capteurs</string>
+	<string name="pref_sound_garage">Garage</string>
+	<string name="pref_sound_alert">Alerte</string>
+	<string name="pref_sound_default">Son par défaut</string>
+	<string name="pref_sound_garage_title">Notification du garage</string>
+	<string name="pref_sound_alert_title">Notification des alertes</string>
 
     <!-- Vues -->
     <string name="pool">Piscine</string>
